# ticko

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml
.github/: PYPI_SETUP.md
.github/workflows/: ci.yml  publish.yml  test-publish.yml
examples/: 01_basic_usage.py  02_context_manager.py  03_lap_timing.py  04_decorator_basic.py  05_decorator_callback.py  06_custom_timer.py  07_exit_callback.py  08_thread_safety.py
tests/: test_decorators.py  test_stop_watch.py  test_thread_safety.py
