[project]
name = "ticko"
version = "0.1.0"
description = "Thread-safe stopwatch for measuring elapsed time"
readme = "README.md"
authors = [
    { name = "NakuRei", email = "nakurei7901@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
